--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-MONGODB = "mongodb+srv://<username>:<password>@<cluster>/<name_database>";
+MONGODB = "mongodb+srv://<username>:<password>@<cluster>/"
+DB = "<name_database>"
 
 API_PORT = "<number_api_port>"
